# dashpipe

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SYSTEM_DESIGN_PROMPT.md  docker-compose.yml  index.html  package-lock.json  pom.xml
.github/: pull_request_template.md
dashflow-api/: pom.xml
dashflow-broker-rabbitmq/: pom.xml
dashflow-broker-servicebus/: pom.xml
dashflow-ci_cd/: docker-compose.platform.yml
dashflow-dev-ai-agent/: README.md  docker-compose.ai.yml
dashflow-dev-ai-agent/dashflow-mcp/: README.md  mcp.json.example  pyproject.toml
dashflow-dev-ai-agent/dashflow-mcp/dashflow_mcp/: __init__.py  __main__.py  catalog.py  client.py  config.py  server.py
dashflow-dev-ai-agent/dashflow-mcp/dashflow_mcp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dashflow-dev-ai-agent/dashflow-mcp/tests/: test_catalog.py
dashflow-platform/: pom.xml
dashflow-ui/: README.md  package-lock.json  vite.config.ts
dashpipe-ci_cd/: README.md  docker-compose.platform.yml
dashpipe-demo/: README.md  (+1 more)
dashpipe-dev-ai-agent/dashpipe-mcp/: README.md  mcp.json.example  pyproject.toml  requirements.txt
dashpipe-dev-ai-agent/dashpipe-mcp/dashpipe_mcp/: __init__.py  __main__.py  client.py  config.py  platform_ops.py  server.py
dashpipe-dev-ai-agent/dashpipe-mcp/dashpipe_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
dashpipe-dev-ai-agent/dashpipe-mcp/examples/: openclaw-mcp.json  vscode-mcp.json
dashpipe-dev-ai-agent/dashpipe-mcp/tests/: test_catalog.py  test_platform_ops.py
(+1901 files in other folders)
