[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dashpipe-mcp"
version = "0.1.0"
description = "MCP server for Dashpipe pipeline control plane"
requires-python = ">=3.12"
dependencies = [
  "fastmcp>=2.0,<3",
  "httpx>=0.27,<1",
  "pydantic>=2,<3",
  "pydantic-settings>=2,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[tool.setuptools.packages.find]
where = ["."]
include = ["dashpipe_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
